--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-web": "^0.11.4",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "remote-redux-devtools": "^0.5.16",
