--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-animatable": "^1.3.2",
     "react-native-router-flux": "^4.0.6",
     "react-native-web": "^0.11.4",
     "react-redux": "^7.1.0",
