--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "remote-redux-devtools": "^0.5.16",
+    "superagent": "^5.1.0",
     "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
