--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "expo-av": "^6.0.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
+    "react-native-animated-swiper": "0.0.23",
     "react-native-router-flux": "^4.0.6",
     "react-native-web": "^0.11.4",
     "react-redux": "^7.1.0",
