--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-av": "^6.0.0",
+    "expo-linear-gradient": "^6.0.0",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
+    "react-native-svg-asset-plugin": "^0.2.0",
     "remote-redux-devtools": "^0.5.16"
   },
   "private": true
